Fix padding on mobile myschedule time header

--- a/app/elements/io-schedule.scss
+++ b/app/elements/io-schedule.scss
@@ -286,6 +286,10 @@ paper-radio-button {
       font-size: 24px;
       line-height: 28px;
     }
+
+    > div {
+      padding-bottom: $mobileKeyline / 2;
+    }
   }
   .filters__panel {
     width: 224px;
